# genesis

./: BLOGPOST.md  CONTRIBUTING.md  Cargo.toml  README.md  genesis.asd
.claude/: settings.local.json
crates/substrate_cli/: Cargo.toml
crates/substrate_cli/src/: main.rs
crates/substrate_core/: Cargo.toml
crates/substrate_core/src/: ast.rs  effect.rs  eval.rs  lib.rs  parse.rs  value.rs
crates/substrate_graph/: Cargo.toml
crates/substrate_graph/src/: deps.rs  ids.rs  invalidate.rs  lib.rs  node.rs  store.rs
crates/substrate_ledger/: Cargo.toml
crates/substrate_ledger/src/: delta.rs  hash.rs  lib.rs  patch.rs  replay.rs  tx.rs
crates/substrate_ledger/tests/: integration.rs
crates/substrate_runtime/: Cargo.toml
crates/substrate_runtime/src/: caps.rs  exec.rs  lib.rs
src/: capability.lisp  delta.lisp  demo.lisp  graph.lisp  kernel.lisp  node.lisp  package.lisp  store.lisp  verbs.lisp
