[package]
name = "substrate_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
substrate_core = { path = "../substrate_core" }
substrate_graph = { path = "../substrate_graph" }
substrate_ledger = { path = "../substrate_ledger" }
substrate_runtime = { path = "../substrate_runtime" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
