[package]
name = "substrate_ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
substrate_core = { path = "../substrate_core" }
substrate_graph = { path = "../substrate_graph" }
substrate_runtime = { path = "../substrate_runtime" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
